tests/ui/unstable-features/trivial_bounds-bug.stderr
error[E0277]: `PhantomPinned` cannot be unpinned
   --> $DIR/trivial_bounds-bug.rs:13:43
    |
13  |     impl Unpin for A where PhantomPinned: Unpin {} //~ ERROR E0277
    |                                           ^^^^^ the trait `Unpin` is not implemented for `PhantomPinned`
    |
    = note: consider using `Box::pin`
note: required by a bound in `Unpin`
   --> $DIR/marker.rs:773:1
    |
773 | pub auto trait Unpin {}
    | ^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `Unpin`
